[package]
name = "cargo-provision"
version = "0.1.0"
edition = "2021"

[dependencies]
cms = { version = "0.2.3", features = ["builder", "pem"] }
base64 = "0.21.7"
der = { version = "0.7.8", features = ["alloc", "derive", "oid", "pem", "std"] }
rsa = { version = "0.9.2", features = ["sha2"] }
sha2 = "0.10"
uuid = { version = "1.7.0", features = ["fast-rng", "v4"] }